# frc-solver

./: .gitignore  README.md  build.py  pyproject.toml
examples/: aktion_mensch.py
frc_solver/: __init__.py  go_backend.py  py_backend.py  solver.py
go/: go.mod
go/cmd/frc/: main.go
go/frc/: solver.go
tests/: test_solver.py
