[build-system]
requires      = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "frc-solver"
version         = "1.0.0"
description     = "Hybrid Friendly Captcha v1 PoW solver — Go binary + Python fallback"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"
keywords        = ["friendly-captcha", "captcha", "proof-of-work", "sha256"]
dependencies    = []

[project.optional-dependencies]
requests = ["requests>=2.28"]
dev      = ["pytest", "requests"]

[tool.setuptools.packages.find]
where   = ["."]
include = ["frc_solver*"]
